welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: value foreach is not a member of Int
  for (i <- hauteur-decalage) {
                   ^